create new feature
feature storage
